# tipping_kata

./: .gitattributes  .gitignore  CMakeLists.txt  README.txt
include/: tipping.hpp
src/: CMakeLists.txt  tipping.cpp
tests/: CMakeLists.txt  contracts.hpp.in  kata1_test.cpp
